--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@stencil/core": "2.4.0",
+    "apexcharts": "^3.24.0",
     "chart.js": "^2.9.4"
   },
   "license": "MIT",
